Fix for icons layout issue.

--- a/widgets/features/styles/default.less
+++ b/widgets/features/styles/default.less
@@ -78,10 +78,14 @@
             [class^="sow-icon-"],
             .sow-icon-image {
                 text-decoration: none;
-                display: block;
                 color: #FFFFFF;
                 width: @container_size;
                 height: @container_size;
+				position: absolute;
+				top: 0;
+				display: flex;
+				align-items: center;
+				justify-content: center;
 
                 background-size: contain;
                 background-repeat: no-repeat;
